# lol-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
