[tool.poetry]
name = "lol-app"
version = "0.1.0"
description = ""
authors = ["Alexandr Obolonkov <itbolonkov2019@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
